ARROW-8070: [C++] Cast segfaults on unsupported cast from list<binary> to utf8

Return with ArrowInvalid for `list<...> => not list` casts.

The `list(binary()) => utf8()` could make sense, but as a `concat` operation.

Closes #6738 from kszucs/ARROW-8070

Authored-by: Krisztián Szűcs <szucs.krisztian@gmail.com>
Signed-off-by: Wes McKinney <wesm+git@apache.org>